Fix wrapping issue when there are multiple buttons in a row

--- a/stylesheets/_page.scss
+++ b/stylesheets/_page.scss
@@ -199,12 +199,13 @@ a.button, p.button a {
   font-family: 'Lato', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-size: 16px;
-  padding: 9px 20px 11px 20px;
-  margin: 0 7px;
+  padding: 11px 20px 12px 20px;
+  margin: 6px 7px 5px 7px;
   text-decoration: none;
   border-width: 0;
-  line-height: 2.5;
+  line-height: 1;
   white-space: nowrap;
+  display: inline-block;
 
   &:hover, &:active, &:focus {
     background: $button-color-hover;
@@ -215,7 +216,6 @@ a.button, p.button a {
 }
 
 p.button {
-  padding: 5px 0;
   text-align: center;
 }
 
